--- a/_layouts/aoi.html
+++ b/_layouts/aoi.html
@@ -8,7 +8,7 @@
 
   <body>
     {% include header.html content="toplevel" %}
-    {% include secondHeader.html content="aoi" %}
+
 
     <div class="page-content">
       <div class="wrapper">
@@ -16,6 +16,7 @@
       </div>
     </div>
 
+    {% include sidebar2.html content="aoi" %}
     {% include footer.html %}
 
   </body>
