added updates to licences for all datasets

--- a/_layouts/aoi.html
+++ b/_layouts/aoi.html
@@ -11,12 +11,13 @@
 
 
     <div class="page-content">
-      <div class="wrapper">
+          {% include sidebar2.html content="aoi" %}
+
+      <div class="wrapper2">
         {{ content }}
       </div>
     </div>
 
-    {% include sidebar2.html content="aoi" %}
     {% include footer.html %}
 
   </body>
