--- a/_layouts/licenses.html
+++ b/_layouts/licenses.html
@@ -10,12 +10,23 @@
     {% include header.html content="toplevel" %}
 
     <div class="page-content">
-          {% include sidebar2.html content="competitions" %}
+
+      {% include sidebar2.html content="license" %}
 
       <div class="wrapper2">
+
         {{ content }}
+
       </div>
+
+
+
+
+      </div>
+
+
     </div>
+
 
     {% include footer.html %}
 
